force-app/main/default/objects/dfsle__EnvelopeStatus__c/dfsle__EnvelopeStatus__c.object-meta.xml
<CustomObject>
    <description>Docusign Status</description>
    <label>Docusign Status</label>
    <nameField>
        <displayFormat>DSX-{0000000}</displayFormat>
        <label>Envelope#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>