force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Account__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect status record with source Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>