force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Case__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect status record with source Case</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>DocuSign Status</relationshipLabel>
    <relationshipName>DocuSign_Status</relationshipName>
    <type>Lookup</type>
</CustomField>