force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Completed__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Completed__c</fullName>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>