force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__Expires__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Expires__c</fullName>
    <label>Expires</label>
    <type>DateTime</type>
</CustomField>