force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SenderEmail__c</fullName>
    <label>Sender Email</label>
    <type>Email</type>
</CustomField>