force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__SenderName__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SenderName__c</fullName>
    <label>Sender Name</label>
    <length>56</length>
    <type>Text</type>
</CustomField>