force-app/main/default/objects/dfsle__EnvelopeStatus__c/fields/dfsle__SourceId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SourceId__c</fullName>
    <label>Salesforce Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>