force-app/main/default/objects/dfsle__EnvelopeStatus__c/listViews/dfsle__All.listView-meta.xml
<ListView>
    <fullName>dfsle__All</fullName>
    <columns>NAME</columns>
    <columns>dfsle__DocuSignId__c</columns>
    <columns>dfsle__Sent__c</columns>
    <columns>dfsle__Status__c</columns>
    <columns>dfsle__SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>