force-app/main/default/objects/dfsle__EnvelopeStatus__c/listViews/dfsle__AllCompleted.listView-meta.xml
<ListView>
    <fullName>dfsle__AllCompleted</fullName>
    <columns>NAME</columns>
    <columns>dfsle__SenderName__c</columns>
    <columns>dfsle__EmailSubject__c</columns>
    <columns>dfsle__Sent__c</columns>
    <columns>dfsle__Completed__c</columns>
    <columns>dfsle__TimeToComplete__c</columns>
    <columns>dfsle__SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>dfsle__Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Completed Envelopes</label>
</ListView>